--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,7 @@
   
   <title>Nancy J. Lopez | Writer | Editor</title>
   
-  <!--This CV page was created by Nancy J. Lopez using HTML and CSS. Last update: 5/17/2021-->
+  <!--This CV page was created by Nancy J. Lopez using HTML and CSS. Last update: 5/18/2021-->
   
   <meta name="author" content="Nancy J. Lopez">
   <meta name="description" content="Hello! I'm Nancy, and this is my curriculum vitae. I'm a technical writer, editor, and UCF graduate, passionate about working in STEM." />
@@ -73,7 +73,7 @@
       <h3><i>Technical Writer/Editor</i></p>
       </h3>
       <p>Palm Coast, Florida, and Remote</p>
-      <p><a href="mailto:nancyjeanlopez@gmail.com">NancyJeanLopez@gmail.com</a></p>
+      <p><a href="mailto:nancyjeanlopez@gmail.com" color="grey">NancyJeanLopez@gmail.com</a></p>
       <p><a href="https://drive.google.com/drive/folders/1putGiKADGc24feaKs5Q9VimG7tmb1Kb7?usp=sharing" class="fa fa-folder" target="_blank"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin" target="_blank"><a href="https://github.com/nancyjeanlopez" class="fa fa-github" target="_blank"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
           class="fa fa-deviantart" target="_blank"></a></p>
 
@@ -148,7 +148,7 @@
       <h1 id="expe">Experience</h1>
 
       <p><i>Everest Realty Group LLC</i> - June 2016 to present</p>
-      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <u><a href="https://www.louisebubser.com/" target="_blank">website</a></u>, monitored website traffic, and answered client
+      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <a href="https://www.louisebubser.com/" target="_blank">website</a>, monitored website traffic, and answered client
         inquiries.</p>
       <p class="indent">
         PERSONAL ASSISTANT - Organized realty documents using DotLoop. Hosted open house events and home showings. Provided technical support. Installed and maintained software and hardware.
@@ -206,7 +206,7 @@
         As a contributing editor, I copyedited Brittany Herrmann’s “Fake News, Real Author” article for publication in UCF’s journal for undergraduate research.</p>
       
       
-      <h3 id="read"><em>For more writing and editing samples, click <u><a href="https://drive.google.com/drive/folders/1putGiKADGc24feaKs5Q9VimG7tmb1Kb7?usp=sharing" target="_blank">here</a></u>.</em></h3>
+      <h3 id="read"><em>For more writing and editing samples, click <a href="https://drive.google.com/drive/folders/1putGiKADGc24feaKs5Q9VimG7tmb1Kb7?usp=sharing" target="_blank">here</a>.</em></h3>
 
     </div>
   </section>
