--- a/Home.html
+++ b/Home.html
@@ -147,9 +147,12 @@
 
       <h1 id="expe">Experience</h1>
 
+      <p><i>GP Strategies</i> - June 2021 to Present</p>
+      <p class="indent">INSTRUCTIONAL DESIGNER - Design curriculums and develop courses based on the educational or training needs of the organization or target audience. Build course content using various presentation programs (i.e., PPT, Word, Articulate) or learning platforms (i.e., NovoEd, EdCast). Focus on developing courses that are accessible to all learning types and learners with disabilities using accessibility guidelines (<a href="https://www.w3.org/TR/WCAG21/" target="_blank">WCAG</a>).</p>
+      <p class="indent">CONTENT & MEDIA DEVELOPER - Write and edit learning content. Source, edit, and produce digital media (i.e., video, audio, infographics). Focus on developing content that is accessible to all learning types and learners with disabilities using accessibility guidelines (<a href="https://www.w3.org/TR/WCAG21/" target="_blank">WCAG</a>).</p>
+      
       <p><i>Everest Realty Group LLC</i> - June 2016 to present</p>
-      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <a href="https://www.louisebubser.com/" target="_blank">website</a>, monitored website traffic, and answered client
-        inquiries.</p>
+      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company website, monitored website traffic, and answered client inquiries.</p>
       <p class="indent">
         PERSONAL ASSISTANT - Organized realty documents using DotLoop. Hosted open house events and home showings. Provided technical support. Installed and maintained software and hardware.
       </p>
