--- a/Home.html
+++ b/Home.html
@@ -150,6 +150,8 @@
       <p><i>GP Strategies</i> - June 2021 to Present</p>
       <p class="indent">INSTRUCTIONAL DESIGNER - Design curriculums and develop courses based on the educational or training needs of the organization or target audience. Build course content using various presentation programs (i.e., PPT, Word, Articulate) or learning platforms (i.e., NovoEd, EdCast). Focus on developing courses that are accessible to all learning types and learners with disabilities using accessibility guidelines (<a href="https://www.w3.org/TR/WCAG21/" target="_blank">WCAG</a>).</p>
       <p class="indent">CONTENT & MEDIA DEVELOPER - Write and edit learning content. Source, edit, and produce digital media (i.e., video, audio, infographics). Focus on developing content that is accessible to all learning types and learners with disabilities using accessibility guidelines (<a href="https://www.w3.org/TR/WCAG21/" target="_blank">WCAG</a>).</p>
+      <p class="indent">CLIENT LIST - GE Aerospace, Eastman Chemical, Electric Boat, Lockheed Martin, State Farm, Eli Lily, Truist, PNC</p>
+
       
       <p><i>Everest Realty Group LLC</i> - June 2016 to present</p>
       <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company website, monitored website traffic, and answered client inquiries.</p>
